fix html size on mobile view

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 
 .main {
-    width: 700px;
+    width: 750px;
     height: auto;
     /* border: 2px red solid; */
     margin-left: auto;
@@ -40,6 +40,12 @@ h2{
     padding: 10px;
     border-radius: 5px;
     cursor: pointer;
+}
+
+.btn:hover{
+    background-color: wheat;
+    color: #292929;
+    transition: ease-in-out 0.4s;
 }
 
 .inline {
@@ -84,14 +90,14 @@ a:hover{
 }
 
 
-@media only screen and (max-width: 750px) {
+@media only screen and (max-width: 800px) {
     p {
         font-size: 16px;
     }
 
-    html {
+    /* html {
         font-size: 14px;
-    }
+    } */
 
     .main{
         width: 95%;
